--- a/litreview.bib
+++ b/litreview.bib
@@ -624,3 +624,41 @@
 	year = {2013},
 	pages = {1285--1293},
 }
+
+@article{fitzpatrick_distributed_2004,
+    title = {Distributed caching with memcached},
+    volume = {2004},
+    issn = {1075-3583},
+    url = {http://dl.acm.org.eres.library.manoa.hawaii.edu/citation.cfm?id=1012889.1012894},
+    number = {124},
+    urldate = {2017-02-02},
+    journal = {Linux Journal},
+    author = {Fitzpatrick, Brad},
+    month = aug,
+    year = {2004},
+    pages = {5},
+}
+
+@article{decandia_dynamo:_2007,
+    title = {Dynamo: amazon's highly available key-value store},
+    volume = {41},
+    shorttitle = {Dynamo},
+    url = {http://dl.acm.org/citation.cfm?id=1294281},
+    number = {6},
+    urldate = {2017-02-02},
+    journal = {ACM SIGOPS operating systems review},
+    author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+    year = {2007},
+    pages = {205--220},
+}
+
+@inproceedings{karger_consistent_1997,
+    title = {Consistent hashing and random trees: {Distributed} caching protocols for relieving hot spots on the {World} {Wide} {Web}},
+    shorttitle = {Consistent hashing and random trees},
+    url = {http://dl.acm.org/citation.cfm?id=258660},
+    urldate = {2017-02-03},
+    booktitle = {Proceedings of the twenty-ninth annual {ACM} symposium on {Theory} of computing},
+    publisher = {ACM},
+    author = {Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
+    year = {1997},
+}
