--- a/litreview.bib
+++ b/litreview.bib
@@ -662,3 +662,21 @@
     author = {Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
     year = {1997},
 }
+
+@inproceedings{Klophaus:2010:RCB:1900160.1900176,
+    author = {Klophaus, Rusty},
+    title = {Riak Core: Building Distributed Applications Without Shared State},
+    booktitle = {ACM SIGPLAN Commercial Users of Functional Programming},
+    series = {CUFP '10},
+    year = {2010},
+    isbn = {978-1-4503-0516-7},
+    location = {Baltimore, Maryland},
+    pages = {14:1--14:1},
+    articleno = {14},
+    numpages = {1},
+    url = {http://doi.acm.org/10.1145/1900160.1900176},
+    doi = {10.1145/1900160.1900176},
+    acmid = {1900176},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+} 
