With Bigtable paper summary

--- a/litreview.bib
+++ b/litreview.bib
@@ -680,3 +680,49 @@
     publisher = {ACM},
     address = {New York, NY, USA},
 } 
+
+@inproceedings{Sumbaly:2012:SLB:2208461.2208479,
+    author = {Sumbaly, Roshan and Kreps, Jay and Gao, Lei and Feinberg, Alex and Soman, Chinmay and Shah, Sam},
+    title = {Serving Large-scale Batch Computed Data with Project Voldemort},
+    booktitle = {Proceedings of the 10th USENIX Conference on File and Storage Technologies},
+    series = {FAST'12},
+    year = {2012},
+    location = {San Jose, CA},
+    pages = {18--18},
+    numpages = {1},
+    url = {http://dl.acm.org/citation.cfm?id=2208461.2208479},
+    acmid = {2208479},
+    publisher = {USENIX Association},
+    address = {Berkeley, CA, USA},
+}
+
+@article{chang_bigtable:_2008,
+    title = {Bigtable: {A} distributed storage system for structured data},
+    volume = {26},
+    shorttitle = {Bigtable},
+    url = {http://dl.acm.org/citation.cfm?id=1365816},
+    number = {2},
+    urldate = {2017-02-02},
+    journal = {ACM Transactions on Computer Systems (TOCS)},
+    author = {Chang, Fay and Dean, Jeffrey and Ghemawat, Sanjay and Hsieh, Wilson C. and Wallach, Deborah A. and Burrows, Mike and Chandra, Tushar and Fikes, Andrew and Gruber, Robert E.},
+    year = {2008},
+    pages = {4},
+}
+
+@inproceedings{burrows2006chubby,
+    title={The Chubby lock service for loosely-coupled distributed systems},
+    author={Burrows, Mike},
+    booktitle={Proceedings of the 7th symposium on Operating systems design and implementation},
+    pages={335--350},
+    year={2006},
+    organization={USENIX Association}
+}
+
+@inproceedings{chandra2007paxos,
+    title={Paxos made live: an engineering perspective},
+    author={Chandra, Tushar D and Griesemer, Robert and Redstone, Joshua},
+    booktitle={Proceedings of the twenty-sixth annual ACM symposium on Principles of distributed computing},
+    pages={398--407},
+    year={2007},
+    organization={ACM}
+}
